src/test/deca/context/valid/created/test-readint.deca
//Description :
// Test d'un readint basique
//
// Resultats :
// 


{
    readInt() ;
}
