src/test/deca/context/invalid/created/print_bool.deca
//Description :
// Print bool
//
// Resultats :
// Erreur

{
print(true);
}
